# progra_tarea2_CoreNumeric

./: CMakeLists.txt  README.md  core_numeric.h  modelos.h  test_concepts.cpp  test_max.cpp  test_mean.cpp  test_transform_reduce.cpp  test_variadic.cpp  test_variance.cpp
